--- a/GPRSTracker/GPRSTracker.vcxproj.filters
+++ b/GPRSTracker/GPRSTracker.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClInclude Include="GPRS.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TinyGPS++.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GPRS.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TinyGPS++.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
