First attempt to make timeouts, and reorganize code

--- a/GPRSTracker/GPRSTracker.vcxproj.filters
+++ b/GPRSTracker/GPRSTracker.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClInclude Include="TinyGPS++.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Timer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GPRS.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="TinyGPS++.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Timer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
